# HPP_foottrajectory

./: .gitlab-ci.yml  CMakeLists.txt  NLP_demo.py  README.md
config/: singleObstacle.yml
demo/: CMakeLists.txt  test_LPQP.cc  test_NLP.cc
foot/: __init__.py
foot/framework/: NLP_framework.py  __init__.py
foot/functions/: Box.py  BoxwithPlane.py  Plane.py  PlaneForHull.py  __init__.py
foot/solvers/: NLPconstraint.py  NLPconstraints.py  NLPcost.py  NLPvariable.py  __init__.py
foot/utils/: __init__.py  load_config.py
include/hpp/foot/: BoxesHullTrajProblem.hh
include/hpp/foot/solvers/: LPQPsolver.hh  NLPconstraint.hh  NLPcost.hh  NLPvariable.hh
include/hpp/foot/utils/: ProblemConfig.hh  defs.hh
src/: BoxesHullTrajProblem.cc  CMakeLists.txt
src/functions/: CostDistance.cc
src/solvers/: LPQPsolver.cc
